--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "ISC",
     "scripts": {
         "dev": "npx nodemon src/server",
-        "start":"npx nodemon src/server"
+        "start":"npx babel-node src/server"
     },
     "keywords": [
         "server",
