--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "randomstring": "^1.1.5"
     },
     "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.13.10",
         "@babel/cli": "^7.13.10",
         "@babel/core": "^7.13.10",
         "@babel/node": "^7.13.0",
