--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@prisma/client": "^2.18.0",
         "bcryptjs": "^2.4.3",
         "chalk": "^3.0.0",
+        "core-js": "^3.9.1",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -31,7 +32,6 @@
         "randomstring": "^1.1.5"
     },
     "devDependencies": {
-        "@babel/plugin-transform-runtime": "^7.13.10",
         "@babel/cli": "^7.13.10",
         "@babel/core": "^7.13.10",
         "@babel/node": "^7.13.0",
