--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "lodash": "^4.17.21",
         "nodemailer": "^6.5.0",
         "passport": "^0.4.1",
-        "passport-google-oauth": "^2.0.0",
+        "passport-google-oauth2": "^0.2.0",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "randomstring": "^1.1.5"
