--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "passport-google-oauth2": "^0.2.0",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
-        "randomstring": "^1.1.5"
+        "randomstring": "^1.1.5",
+        "stripe": "^8.143.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.13.10",
