--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "randomstring": "^1.1.5",
-        "stripe": "^8.143.0"
+        "stripe": "^8.143.0",
+        "unirest": "^0.6.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.13.10",
